--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,2 @@
-spring.data.mongodb.uri=mongodb+srv://xhuang35:tb94Zxm1UB2QRkBB@root.3vhqbgn.mongodb.net/?retryWrites=true&w=majority
-spring.data.mongodb.database=root
+spring.data.mongodb.uri=mongodb+srv://xhuang35:Ycx196994.@cluster0.lz6tavq.mongodb.net/?retryWrites=true&w=majority
+spring.data.mongodb.database=jeffhuang
