--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,10 @@
 	<name>JobListing</name>
 	<description>mdb spring boot project</description>
 	<properties>
-		<java.version>1.8</java.version>
+		<java.version>21</java.version>
+		<maven.compiler.release>21</maven.compiler.release>
+        <maven.compiler.source>21</maven.compiler.source>
+        <maven.compiler.target>21</maven.compiler.target>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -47,8 +50,9 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.11.0</version>
 				<configuration>
-					<source>1.8</source> 
-					<target>1.8</target>
+					<release>21</release>
+					<source>21</source> 
+					<target>21</target>
 				</configuration>
 			</plugin>
 			<plugin>
