--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,12 @@
 			<version>2.1.0</version>
  		</dependency>
 
+		<dependency>
+  			<groupId>org.apache.httpcomponents.client5</groupId>
+  			<artifactId>httpclient5</artifactId>
+  			<scope>test</scope>
+		</dependency>
+
 	</dependencies>
 
 	<build>
